--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,6 +1,6 @@
-name: suggestic-coach-portal
+name: Testing
 
-on: [ push, pull_request ]
+on: [ push ]
 
 jobs:
   tests:
@@ -8,11 +8,14 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.8 ]
+        multiple-versions: [ 'on' ]
         include:
-        - graphql-core-version: ">=2.1.0,<3"
-          graphene-tests: graphene_2
-        - graphql-core-version: ">=3.1.5,<4"
-          graphene-tests: graphene_3
+          - graphql-core-version: ">=2.1.0,<3"
+            graphene-tests: graphene_2
+            multiple-versions: 'on'
+          - graphql-core-version: ">=3.1.5,<4"
+            graphene-tests: graphene_3
+            multiple-versions: 'on'
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
