--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,8 +25,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install graphql-core${{ matrix.graphql-core-version }}
-          pip install -f requirements.txt
+          python -m pip install graphql-core${{ matrix.graphql-core-version }}
+          python -m pip install -f requirements.txt
       - name: Run tests
         run: |
           python -m unittest discover -s $(pwd)/tests/common -t $(pwd)
