--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install graphql-core${{ matrix.graphql-core-version }}
-          python -m pip install -f requirements.txt
+          python -m pip install -r requirements.txt
       - name: Run tests
         run: |
           python -m unittest discover -s $(pwd)/tests/common -t $(pwd)
