--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install 'graphene{{ matrix.graphql-core-version }}'
+          python -m pip install 'graphene${{ matrix.graphql-core-version }}'
           python -m pip install -r requirements.txt
       - name: Run tests
         run: |
