--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9, 3.10, 3.11 ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
         gql-version: [ 2, 3 ]
         include:
           - graphene-version: '>=2.1.0,<3'
